# hn-ai-summarizer

./: .dockerignore  .env.example  .gitignore  .pylintrc  .woodpecker.yml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose-with-external-services.yml  docker-compose.dev.yml  docker-compose.external.yml  docker-compose.yml  docker-entrypoint.sh  hn_ai_summerizer.db  pyproject.toml  start.ps1  start.sh
.github/workflows/: pages.yml
app/: __init__.py  cli.py  main.py
app/core/: config.py  database.py  logging_config.py
app/models/: __init__.py  activity_log.py  ai_activity_log.py  feedback.py  preference.py  setting.py  story.py
app/schemas/: __init__.py  activity_log.py  ai_activity_log.py  preference.py  setting.py  story.py
app/scripts/: backfill_hn_created_at.py  fix_locales.py  init_db.py  run_scheduler.py  test_schedule_sync.py  verify_locales.py
app/services/: ai_service.py  fetcher.py  provider_registry.py  rate_limiter.py  reprocess_state.py  story_service.py  telegram_service.py
app/shared/: __init__.py  languages.py
app/tasks/: schedule_manager.py  scheduler.py  worker.py
app/templates/: base.html  index.html  logs.html  settings.html
app/utils/: keywords.py  scraper.py
docs/: ARCHITECTURE.md  INSTALLATION.md  proje-ozeti.md  redis_scheduling.md
graphify-out/: graph.json
migrations/: env.py
migrations/versions/: 1ac0aa0364d2_add_is_read_to_stories.py  20230501_initial_migration.py  20260709_add_is_translated.py  (+8 more)
tests/: test_main.py  test_models.py  test_reprocess_state.py  test_schemas.py  test_utils.py
(+44 files in other folders)
