[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hn-ai-summerizer"
version = "0.1.0"
description = "AI-powered Hacker News summarizer with Turkish translation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sencer HAMARAT" },
]

dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.27.0",
    "psycopg2-binary>=2.9.0",
    "aiosqlite>=0.18.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic-core>=2.0.0",
    "httpx>=0.23.0",
    "trafilatura>=1.6.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "arq>=0.25.0",
    "redis>=4.5.0",
    "aioredis>=2.0.0",
    "aioschedule>=0.5.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
hn-ai-summerizer = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]